--- a/index.html
+++ b/index.html
@@ -148,275 +148,226 @@
   </div>
 
   <script>
-    (function(){
-      const scene = document.getElementById('scene');
-      const fireBtn = document.getElementById('fireBtn');
-      const volleyBtn = document.getElementById('volleyBtn');
-      const musicBtn = document.getElementById('musicBtn');
-      const enemy = document.getElementById('enemy');
-      const healthFill = document.getElementById('healthFill');
-      const booms = [document.getElementById('boom1'), document.getElementById('boom2'), document.getElementById('boom3')];
-      const victory = document.getElementById('victory');
-      const restartBtn = document.getElementById('restartBtn');
+(function(){
+  const scene = document.getElementById('scene');
+  const fireBtn = document.getElementById('fireBtn');
+  const volleyBtn = document.getElementById('volleyBtn');
+  const musicBtn = document.getElementById('musicBtn');
+  const enemy = document.getElementById('enemy');
+  const healthFill = document.getElementById('healthFill');
+  const booms = [document.getElementById('boom1'), document.getElementById('boom2'), document.getElementById('boom3')];
+  const victory = document.getElementById('victory');
+  const restartBtn = document.getElementById('restartBtn');
 
-      // basic SFX
-      const cannon = new Audio('https://actions.google.com/sounds/v1/weapons/cannon.ogg');
-      const splash = new Audio('https://actions.google.com/sounds/v1/water/splash.ogg');
-      const voice = new SpeechSynthesisUtterance('Captain Seawall unleashes a devastating barrage on Ball Pond Scum!');
-      voice.rate = 0.95; voice.pitch = 0.55;
+  // Sound effects
+  const cannon = new Audio('https://actions.google.com/sounds/v1/weapons/cannon.ogg');
+  const splash = new Audio('https://actions.google.com/sounds/v1/water/splash.ogg');
+  const voice = new SpeechSynthesisUtterance('Captain Seawall unleashes a devastating barrage on Ball Pond Scum!');
+  voice.rate = 0.95; voice.pitch = 0.55;
 
-      let firing = false;
-      let health = 100;
-      let musicOn = false;
-      let audioCtx = null;
-      let musicNodes = null;
+  let firing = false;
+  let health = 100;
+  let musicOn = false;
+  let musicTrack = null;
 
-      function speak(text) {
-        try { if (text) voice.text = text; window.speechSynthesis.cancel(); window.speechSynthesis.speak(voice); } catch(e) {}
-      }
+  function speak(text) {
+    try { if (text) voice.text = text; window.speechSynthesis.cancel(); window.speechSynthesis.speak(voice); } catch(e) {}
+  }
 
-      function play(aud) { try { aud.currentTime = 0; aud.play(); } catch(e) {} }
+  function play(aud) { try { aud.currentTime = 0; aud.play(); } catch(e) {} }
 
-      // Pirate-y drum loop with WebAudio: kick + tom + hat; 80 BPM
-      function startMusic() {
-        if (musicOn) return;
-        musicOn = true;
-        musicBtn.textContent = '🎵 Music: On';
-        if (!audioCtx) audioCtx = new (window.AudioContext || window.webkitAudioContext)();
-        const ctx = audioCtx;
-
-        const master = ctx.createGain(); master.gain.value = 0.2; master.connect(ctx.destination);
-
-        function kick(time){
-          const osc = ctx.createOscillator();
-          const gain = ctx.createGain();
-          osc.frequency.setValueAtTime(120, time);
-          osc.frequency.exponentialRampToValueAtTime(40, time + 0.12);
-          gain.gain.setValueAtTime(1, time);
-          gain.gain.exponentialRampToValueAtTime(0.001, time + 0.12);
-          osc.connect(gain); gain.connect(master);
-          osc.start(time); osc.stop(time + 0.13);
-        }
-
-        function tom(time){
-          const osc = ctx.createOscillator();
-          const gain = ctx.createGain();
-          osc.type = 'sine';
-          osc.frequency.setValueAtTime(200, time);
-          osc.frequency.exponentialRampToValueAtTime(90, time + 0.15);
-          gain.gain.setValueAtTime(0.5, time);
-          gain.gain.exponentialRampToValueAtTime(0.001, time + 0.16);
-          osc.connect(gain); gain.connect(master);
-          osc.start(time); osc.stop(time + 0.17);
-        }
-
-        function hat(time){
-          const bufferSize = 2 * ctx.sampleRate;
-          const buffer = ctx.createBuffer(1, bufferSize, ctx.sampleRate);
-          const data = buffer.getChannelData(0);
-          for (let i = 0; i < bufferSize; i++) data[i] = Math.random() * 2 - 1;
-          const noise = ctx.createBufferSource(); noise.buffer = buffer;
-          const bp = ctx.createBiquadFilter(); bp.type = 'highpass'; bp.frequency.value = 8000;
-          const gain = ctx.createGain(); gain.gain.value = 0.05;
-          noise.connect(bp); bp.connect(gain); gain.connect(master);
-          noise.start(time); noise.stop(time + 0.05);
-        }
-
-        const bpm = 80;
-        const beat = 60/bpm;
-        let t = ctx.currentTime + 0.05;
-
-        let running = true;
-        function schedule(){
-          if (!running) return;
-          // Pattern: Kick | Hat | Tom | Hat
-          kick(t); hat(t + 0.05);
-          hat(t + beat*0.5);
-          tom(t + beat*1.0); hat(t + beat*1.05);
-          hat(t + beat*1.5);
-          // Little swing
-          t += beat*2;
-          setTimeout(schedule, beat*1000);
-        }
-        schedule();
-
-        musicNodes = { stop(){ running = false; } };
-      }
-
-      function stopMusic() {
-        musicOn = false;
-        musicBtn.textContent = '🎵 Music: Off';
-        if (musicNodes && musicNodes.stop) musicNodes.stop();
-        musicNodes = null;
-      }
-
+  // 🎵 Victory at Sea theme music (auto-start)
+  function startMusic() {
+    if (musicOn) return;
+    musicOn = true;
+    musicBtn.textContent = '🎵 Music: On';
+    musicTrack = new Audio('https://upload.wikimedia.org/wikipedia/commons/2/26/Victory_at_Sea_Theme.ogg');
+    musicTrack.loop = true;
+    musicTrack.volume = 0.4;
+    musicTrack.play().catch(()=> {
+      // Some browsers block autoplay until user interacts
+      musicBtn.textContent = '🎵 Click to Play Music';
       musicBtn.addEventListener('click', () => {
-        if (!musicOn) startMusic();
-        else stopMusic();
-      });
+        musicTrack.play();
+        musicBtn.textContent = '🎵 Music: On';
+      }, { once: true });
+    });
+  }
 
-      function makeParticle(x, y) {
-        const p = document.createElement('div');
-        p.className = 'particle';
-        p.style.left = x + 'px';
-        p.style.top = y + 'px';
-        document.body.appendChild(p);
-        const angle = Math.random() * Math.PI * 2;
-        const speed = 80 + Math.random() * 140;
-        const life = 500 + Math.random() * 400;
-        const start = performance.now();
-        p.style.opacity = 1;
-        function frame(t){
-          const dt = t - start;
-          const k = Math.min(1, dt/life);
-          const dx = Math.cos(angle) * speed * k;
-          const dy = Math.sin(angle) * speed * k + 0.5 * 400 * (k*k);
-          p.style.transform = `translate(${dx}px, ${dy}px) scale(${1-k})`;
-          p.style.opacity = 1-k;
-          if (k < 1) requestAnimationFrame(frame);
-          else p.remove();
-        }
-        requestAnimationFrame(frame);
+  function stopMusic() {
+    musicOn = false;
+    musicBtn.textContent = '🎵 Music: Off';
+    if (musicTrack) { musicTrack.pause(); musicTrack.currentTime = 0; }
+  }
+
+  musicBtn.addEventListener('click', () => {
+    if (!musicOn) startMusic();
+    else stopMusic();
+  });
+
+  // Auto-start music as soon as possible
+  window.addEventListener('load', () => {
+    startMusic();
+  });
+
+  function makeParticle(x, y) {
+    const p = document.createElement('div');
+    p.className = 'particle';
+    p.style.left = x + 'px';
+    p.style.top = y + 'px';
+    document.body.appendChild(p);
+    const angle = Math.random() * Math.PI * 2;
+    const speed = 80 + Math.random() * 140;
+    const life = 500 + Math.random() * 400;
+    const start = performance.now();
+    p.style.opacity = 1;
+    function frame(t){
+      const dt = t - start;
+      const k = Math.min(1, dt/life);
+      const dx = Math.cos(angle) * speed * k;
+      const dy = Math.sin(angle) * speed * k + 0.5 * 400 * (k*k);
+      p.style.transform = `translate(${dx}px, ${dy}px) scale(${1-k})`;
+      p.style.opacity = 1-k;
+      if (k < 1) requestAnimationFrame(frame);
+      else p.remove();
+    }
+    requestAnimationFrame(frame);
+  }
+
+  function confettiBurst() {
+    const colors = ['#fde047','#60a5fa','#fb7185','#34d399','#fbbf24','#c084fc'];
+    for (let i=0;i<120;i++) {
+      const c = document.createElement('div');
+      c.className = 'confetti';
+      c.style.left = (Math.random()*100) + 'vw';
+      c.style.top = '-20px';
+      c.style.background = colors[Math.floor(Math.random()*colors.length)];
+      c.style.transform = `rotate(${Math.random()*360}deg)`;
+      document.body.appendChild(c);
+      const duration = 2000 + Math.random()*2000;
+      const start = performance.now();
+      const drift = (Math.random()*2-1) * 120;
+      function frame(t){
+        const k = Math.min(1, (t-start)/duration);
+        c.style.top = (k*100) + 'vh';
+        c.style.left = `calc(${parseFloat(c.style.left)}vw + ${drift*k}px)`;
+        c.style.transform = `rotate(${k*720}deg)`;
+        if (k < 1) requestAnimationFrame(frame);
+        else c.remove();
       }
+      requestAnimationFrame(frame);
+    }
+  }
 
-      function confettiBurst() {
-        const colors = ['#fde047','#60a5fa','#fb7185','#34d399','#fbbf24','#c084fc'];
-        for (let i=0;i<120;i++) {
-          const c = document.createElement('div');
-          c.className = 'confetti';
-          c.style.left = (Math.random()*100) + 'vw';
-          c.style.top = '-20px';
-          c.style.background = colors[Math.floor(Math.random()*colors.length)];
-          c.style.transform = `rotate(${Math.random()*360}deg)`;
-          document.body.appendChild(c);
-          const duration = 2000 + Math.random()*2000;
-          const start = performance.now();
-          const drift = (Math.random()*2-1) * 120;
-          function frame(t){
-            const k = Math.min(1, (t-start)/duration);
-            c.style.top = (k*100) + 'vh';
-            c.style.left = `calc(${parseFloat(c.style.left)}vw + ${drift*k}px)`;
-            c.style.transform = `rotate(${k*720}deg)`;
-            if (k < 1) requestAnimationFrame(frame);
-            else c.remove();
-          }
-          requestAnimationFrame(frame);
-        }
+  function fanfare(){
+    const ctx = new (window.AudioContext || window.webkitAudioContext)();
+    const master = ctx.createGain(); master.gain.value = 0.25; master.connect(ctx.destination);
+    function note(freq, time, len=0.25){
+      const o = ctx.createOscillator();
+      const g = ctx.createGain();
+      o.type = 'triangle'; o.frequency.value = freq;
+      g.gain.setValueAtTime(0, time);
+      g.gain.linearRampToValueAtTime(0.8, time + 0.01);
+      g.gain.linearRampToValueAtTime(0, time + len);
+      o.connect(g); g.connect(master);
+      o.start(time); o.stop(time + len + 0.02);
+    }
+    const now = ctx.currentTime + 0.05;
+    const seq = [523, 659, 784, 1046, 784, 988, 1046];
+    seq.forEach((f, i) => note(f, now + i*0.22, 0.2));
+  }
+
+  function impactEffects() {
+    scene.classList.add('shake');
+    setTimeout(()=> scene.classList.remove('shake'), 350);
+
+    booms.forEach((b, i) => {
+      setTimeout(()=> { b.classList.add('show'); setTimeout(()=> b.classList.remove('show'), 450); }, i*100);
+    });
+
+    const rect = enemy.getBoundingClientRect();
+    const cx = rect.left + rect.width/2;
+    const cy = rect.top + rect.height/2;
+    for (let i=0;i<24;i++) makeParticle(cx, cy);
+
+    health = Math.max(0, health - (8 + Math.random()*10));
+    healthFill.style.width = health + '%';
+
+    if (health <= 0) {
+      enemy.style.filter = 'grayscale(1) brightness(0.5)';
+      enemy.style.transform = 'scale(0.8)';
+      enemy.style.opacity = '0.2';
+      confettiBurst();
+      fanfare();
+      victory.classList.add('show');
+      stopMusic();
+    }
+  }
+
+  function animateCannonball(startX, startY, endX, duration=1500) {
+    const ball = document.createElement('div');
+    ball.className = 'cannonball';
+    document.body.appendChild(ball);
+    ball.style.left = startX + 'px';
+    ball.style.bottom = startY + 'px';
+    ball.style.opacity = 1;
+    const start = performance.now();
+    function frame(t){
+      const p = Math.min(1, (t - start)/duration);
+      const x = startX + (endX - startX) * p;
+      const y = startY + Math.sin(p * Math.PI) * 40 - p * 10;
+      ball.style.transform = `translate(${x - startX}px, ${-y}px)`;
+      if (p < 1) requestAnimationFrame(frame);
+      else {
+        ball.style.opacity = 0;
+        ball.remove();
+        impactEffects();
       }
+    }
+    requestAnimationFrame(frame);
+  }
 
-      function fanfare(){
-        if (!audioCtx) audioCtx = new (window.AudioContext || window.webkitAudioContext)();
-        const ctx = audioCtx;
-        const master = ctx.createGain(); master.gain.value = 0.2; master.connect(ctx.destination);
+  function fireOne() {
+    speak('Fire!');
+    play(cannon);
+    const startX = 160;
+    const startY = 150;
+    const endX = window.innerWidth - 180;
+    animateCannonball(startX, startY, endX, 1400 + Math.random()*200);
+    setTimeout(()=> play(splash), 1100);
+  }
 
-        function note(freq, time, len=0.25){
-          const o = ctx.createOscillator();
-          const g = ctx.createGain();
-          o.type = 'triangle'; o.frequency.value = freq;
-          g.gain.setValueAtTime(0, time);
-          g.gain.linearRampToValueAtTime(0.8, time + 0.01);
-          g.gain.linearRampToValueAtTime(0, time + len);
-          o.connect(g); g.connect(master);
-          o.start(time); o.stop(time + len + 0.02);
-        }
-
-        const now = ctx.currentTime + 0.05;
-        const seq = [523, 659, 784, 1046, 784, 988, 1046]; // simple triumph
-        seq.forEach((f, i) => note(f, now + i*0.22, 0.2));
-      }
-
-      function impactEffects() {
-        scene.classList.add('shake');
-        setTimeout(()=> scene.classList.remove('shake'), 350);
-
-        booms.forEach((b, i) => {
-          setTimeout(()=> { b.classList.add('show'); setTimeout(()=> b.classList.remove('show'), 450); }, i*100);
-        });
-
-        const rect = enemy.getBoundingClientRect();
-        const cx = rect.left + rect.width/2;
-        const cy = rect.top + rect.height/2;
-        for (let i=0;i<24;i++) makeParticle(cx, cy);
-
-        health = Math.max(0, health - (8 + Math.random()*10));
-        healthFill.style.width = health + '%';
-
-        if (health <= 0) {
-          // Victory sequence
-          enemy.style.filter = 'grayscale(1) brightness(0.5)';
-          enemy.style.transform = 'scale(0.8)';
-          enemy.style.opacity = '0.2';
-          confettiBurst();
-          fanfare();
-          victory.classList.add('show');
-          stopMusic();
-        }
-      }
-
-      function animateCannonball(startX, startY, endX, duration=1500) {
-        const ball = document.createElement('div');
-        ball.className = 'cannonball';
-        document.body.appendChild(ball);
-        ball.style.left = startX + 'px';
-        ball.style.bottom = startY + 'px';
-        ball.style.opacity = 1;
-        const start = performance.now();
-        function frame(t){
-          const p = Math.min(1, (t - start)/duration);
-          const x = startX + (endX - startX) * p;
-          const y = startY + Math.sin(p * Math.PI) * 40 - p * 10;
-          ball.style.transform = `translate(${x - startX}px, ${-y}px)`;
-          if (p < 1) requestAnimationFrame(frame);
-          else {
-            ball.style.opacity = 0;
-            ball.remove();
-            impactEffects();
-          }
-        }
-        requestAnimationFrame(frame);
-      }
-
-      function fireOne() {
-        speak('Fire!');
-        play(cannon);
-        const startX = 160;
-        const startY = 150;
-        const endX = window.innerWidth - 180;
-        animateCannonball(startX, startY, endX, 1400 + Math.random()*200);
-        setTimeout(()=> play(splash), 1100);
-      }
-
-      function fireVolley(count=7, spacing=160) {
-        if (firing || victory.classList.contains('show')) return;
-        firing = true;
-        speak('Full volley!');
-        let i = 0;
-        (function loop(){
-          fireOne();
-          i++;
-          if (i < count && health > 0) setTimeout(loop, spacing);
-          else setTimeout(()=> firing=false, spacing + 400);
-        })();
-      }
-
-      document.getElementById('fireBtn').addEventListener('click', () => {
-        if (firing || victory.classList.contains('show')) return;
-        firing = true;
-        fireOne();
-        setTimeout(()=> firing=false, 1600);
-      });
-
-      document.getElementById('volleyBtn').addEventListener('click', () => fireVolley(9, 140));
-
-      restartBtn.addEventListener('click', () => {
-        health = 100;
-        healthFill.style.width = '100%';
-        enemy.style.filter = 'none';
-        enemy.style.transform = 'none';
-        enemy.style.opacity = '1';
-        victory.classList.remove('show');
-      });
+  function fireVolley(count=7, spacing=160) {
+    if (firing || victory.classList.contains('show')) return;
+    firing = true;
+    speak('Full volley!');
+    let i = 0;
+    (function loop(){
+      fireOne();
+      i++;
+      if (i < count && health > 0) setTimeout(loop, spacing);
+      else setTimeout(()=> firing=false, spacing + 400);
     })();
-  </script>
+  }
+
+  fireBtn.addEventListener('click', () => {
+    if (firing || victory.classList.contains('show')) return;
+    firing = true;
+    fireOne();
+    setTimeout(()=> firing=false, 1600);
+  });
+
+  volleyBtn.addEventListener('click', () => fireVolley(9, 140));
+
+  restartBtn.addEventListener('click', () => {
+    health = 100;
+    healthFill.style.width = '100%';
+    enemy.style.filter = 'none';
+    enemy.style.transform = 'none';
+    enemy.style.opacity = '1';
+    victory.classList.remove('show');
+  });
+})();
+</script>
 </body>
 </html>
